--- a/src/css/lti.scss
+++ b/src/css/lti.scss
@@ -472,8 +472,7 @@ html {
 		#lti-login-section {
 			margin: 0px auto;
 			width: 100%;
-			//background: #fff;
-			background: #21232a;
+			background: #fff;
 
 			header {
 				margin: 0;
