--- a/src/components/pre-embed-common-styles.scss
+++ b/src/components/pre-embed-common-styles.scss
@@ -1,5 +1,7 @@
 /* pre-embed view */
 
+@import './include.scss';
+
 html,
 body {
 	height: 100%;
@@ -201,7 +203,7 @@ body {
 	
 					img {
 						width: auto;
-						height: 15px;
+						height: 18px;
 						margin-top: 1px;
 					}
 				}
@@ -323,11 +325,10 @@ body {
 		border: #181920 1px solid;
 		box-shadow: 1px 3px 10px #08090c;
 
-		.widget_info {
-			.widget_icon {
-				background: #0093e7;
-				color: #fff;
-				box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
+		div.detail {
+
+			&.pre-embed {
+				background: $color-background-dark-gray;
 			}
 		}
 
@@ -349,6 +350,10 @@ body {
 				color: #dd9696;
 			}
 		}
+
+		.widget-embed-footer {
+			color: #ddd;
+		}
 	}
 }
 
@@ -363,46 +368,3 @@ body {
 		}
 	}
 }
-
-// @media (max-width: 720px) {
-
-// 	.container {
-// 		margin: 10% auto 0px auto !important;
-// 		align-items: center;
-// 	}
-// }
-
-
-/* login styles */
-
-// @media (max-width: 720px) {
-// 	.widget .container {
-// 		margin: 10% auto 0px auto !important;
-// 		align-items: center;
-// 	}
-
-// 	.widget section.page,
-// 	.widget aside {
-// 		border: none !important;
-// 		box-shadow: none !important;
-// 	}
-
-// 	.widget .form-content ul {
-// 		width: 0px !important;
-// 		margin: 0 !important;
-// 	}
-
-// 	.widget ul.help_links {
-// 		width: 100% !important;
-// 	}
-
-// 	.widget .form-content ul li input[type='text'],
-// 	.widget .form-content ul li input[type='password'] {
-// 		width: 300px !important;
-// 	}
-
-// 	.widget .error p {
-// 		width: 307px !important;
-// 	}
-
-// }
