--- a/src/components/support-page.scss
+++ b/src/components/support-page.scss
@@ -393,10 +393,17 @@
 			}
 		}
 	}
+
 	.page > ul {
 		> li {
-			background-color: #eee;
-			border: 1px solid #ccc;
+			background: none;
+			border: none;
+
+			.widget-title {
+				color: #fff;
+				background-color: $color-background-dark-gray;
+				border: $color-input-box-border-dark;
+			}
 		}
 	}
 }
