--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -280,9 +280,10 @@
 						}
 
 						&.type {
+							margin-top: 0.25em;
 							color: #444;
-							font-size: 0.7em;
-							font-size: 11px;
+							font-size: 0.75em;
+							font-weight: 400;
 						}
 
 						&.score {
