--- a/src/components/detail.scss
+++ b/src/components/detail.scss
@@ -7,6 +7,8 @@ $color-green: #c5dd60;
 .page {
 	margin: 0 auto 20px;
 	max-width: 950px;
+
+	font-weight: 400;
 }
 
 #breadcrumb-container {
@@ -17,7 +19,7 @@ $color-green: #c5dd60;
 	padding: 5px 10px;
 	background: #eee;
 	border-radius: 3px;
-	font-size: 12px;
+	font-size: 14px;
 	border: 1px solid #ccc;
 
 	.breadcrumb {
