--- a/src/components/help-page.scss
+++ b/src/components/help-page.scss
@@ -100,6 +100,19 @@
 			font-size: 20px;
 		}
 
+		ul {
+			margin: 0.5em 0;
+			padding-left: 1em;
+
+			li {
+				line-height: 1.4em;
+			}
+		}
+
+		p {
+			line-height: 1.4em;
+		}
+
 		h3 {
 			margin: 30px 0 0 0;
 
