--- a/src/components/help-page.scss
+++ b/src/components/help-page.scss
@@ -26,6 +26,12 @@
 			text-align: left;
 			font-size: 14px;
 
+			.navigation {
+				li a {
+					font-weight: 400;
+				}
+			}
+
 			.content {
 				display: flex;
 				align-items: stretch;
