Minor tweaks to restricted login content

--- a/src/components/pre-embed-common-styles.scss
+++ b/src/components/pre-embed-common-styles.scss
@@ -109,7 +109,7 @@ body {
 			.unavailable-subtext {
 				margin-bottom: 40px;
 				font-size: 0.8em;
-				font-size: 600;
+				font-weight: 700;
 			}
 		}
 
